@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-07-08T08:31:23Z",
-  "count" : 120,
-  "count_minmax" : [ 120, 120 ],
-  "count_decinc" : [ -0, +120 ],
+  "timestamp" : "2022-07-08T16:38:24Z",
+  "count" : 246,
+  "count_minmax" : [ 120, 246 ],
+  "count_decinc" : [ -0, +246 ],
   "uniques" : 2,
   "uniques_minmax" : [ 2, 2 ],
   "uniques_decinc" : [ -0, +2 ]
