@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2022-07-08T08:31:23Z",
+  "timestamp" : "2022-07-08T16:38:24Z",
   "count_outdated" : 36823,
   "uniques_outdated" : 678,
   "count" : 41704,
-  "uniques" : 709,
+  "uniques" : 708,
   "clones" : [
     {
       "timestamp": "2022-06-24T00:00:00Z",
-      "count": 183,
-      "count_minmax": [ 119, 351 ],
-      "uniques": 2,
+      "count": 57,
+      "count_minmax": [ 57, 351 ],
+      "uniques": 1,
       "uniques_minmax": [ 1, 2 ]
     },
     {
@@ -105,8 +105,8 @@
     },
     {
       "timestamp": "2022-07-08T00:00:00Z",
-      "count": 120,
-      "count_minmax": [ 120, 120 ],
+      "count": 246,
+      "count_minmax": [ 120, 246 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
     }
