@@ -4,8 +4,8 @@
   "clones": [
     {
       "timestamp": "2022-06-24T00:00:00Z",
-      "count": 183,
-      "uniques": 2
+      "count": 57,
+      "uniques": 1
     },
     {
       "timestamp": "2022-06-25T00:00:00Z",
@@ -74,7 +74,7 @@
     },
     {
       "timestamp": "2022-07-08T00:00:00Z",
-      "count": 120,
+      "count": 246,
       "uniques": 2
     }
   ]
