@@ -1,3 +1,10 @@
+2022-07-08T16:38:24Z:
+* notice: last 14d: unq all: 3 4881
+* notice: prev accum: outdated-unq outdated-all / unq all: 678 36823 / 709 41704
+* notice: next accum: outdated-unq outdated-all / unq all: 678 36823 / 708 41704
+* notice: prev exec diff / last date diff / accum: unq all: +0 +126 -1 -126 / +2 +246 -0 -0 / 2 246
+* notice: removed / changed dates: [] / [2022-06-24 2022-07-08]
+
 2022-07-08T08:31:23Z:
 * notice: last 14d: unq all: 3 4881
 * notice: prev accum: outdated-unq outdated-all / unq all: 678 36823 / 707 41684
